--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -4,9 +4,9 @@
 //   .home-contenedor {
 //     min-height: 100vh;
 //   }
-    
+
 // .home-contenedor-pokemon{
-   
+
 //         width: 100%; /* Abarca todo el ancho del cuerpo */
 //         margin: 0 auto; /* Centra horizontalmente */
 //       height: 100%;
@@ -15,8 +15,8 @@
 //         grid-template-columns: repeat(3, 1fr); /* Cambiado a 3 columnas */
 //         // grid-template-rows: repeat(3, 1fr);
 //         gap: 40px;
-      
-      
+
+
 // }
 // .home-pokemon-grid {
 //     display: grid;
@@ -27,15 +27,16 @@
 //     // grid-template-rows: repeat(3, 1fr);
 //     gap: 20px;
 //   }
-  
-  .pokemon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+
+.pokemon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 //   .home-pokemon-card {
-    
+
 //     background-color: white;
 //     padding: 15px;
 //     border-radius: 10px;
@@ -43,7 +44,7 @@
 //     text-align: center;
 //     transition: transform 0.3s ease;
 //   }
-  
+
 //   .home-pokemon-card:hover {
 //     transform: translateY(-5px);
 //   }
@@ -53,7 +54,7 @@
 //     grid-template-columns: repeat(4, 1fr);
 //     gap: 20px;
 //   }
-  
+
 //   .home-pokemon-card {
 //     background-color: white;
 //     padding: 15px;
@@ -63,53 +64,76 @@
 //     transition: transform 0.3s ease;
 //     cursor: pointer;
 //   }
-  
+
 //   .home-pokemon-card:hover {
 //     transform: translateY(-5px);
 //   }
 .home-contenedor-pokemon {
-    width: 100%;
-    margin: 0 auto;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-    // position: fixed;
-  }
-  
-  .home-pokemon-grid {
-    overflow: scroll;
-    object-fit: cover;
-    top: 120%;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding-top: 40px;
-    padding-left: 135px;
-    width: 100%;
-	margin-bottom: 120px;
-	
-  }
-  
-  .home-pokemon-card {
-    overflow: scroll;
-    background-color: white;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-    width: 250px;
-  }
-  
-  .home-pokemon-card:hover {
-    transform: translateY(-5px);
-  }
-.btn-addcart{
-gap: 20px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  // position: fixed;
 }
-.btn-view{
+
+.home-pokemon-grid {
+  overflow: scroll;
+  object-fit: cover;
+  top: 120%;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  padding-top: 40px;
+  padding-left: 135px;
+  width: 100%;
+  margin-bottom: 120px;
+
+}
+
+.home-pokemon-card {
+  overflow: scroll;
+  background-color: white;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+  width: 250px;
+}
+
+.home-pokemon-card:hover {
+  transform: translateY(-5px);
+}
+
+
+.button-container {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+
+
+.Add-Cart-Btn {
+  width: 70px;
+  padding: 2px;
+  background-color: #FF8C00;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  gap: 20px;
+}
+
+.Btn-Stats {
+  width: 70px;
+  padding: 2px;
+  background-color: #FF8C00;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  gap: 20px;
+}
 }
