--- a/src/scss/layout/_pokedex.scss
+++ b/src/scss/layout/_pokedex.scss
@@ -1,7 +1,31 @@
+.navbar-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-links {
+    display: flex;
+    gap: 20px; /* Espacio entre los enlaces */
+}
+
+.navbar-search {
+    flex-grow: 1; /* Para que el SearchBar ocupe el espacio restante */
+    display: flex;
+    justify-content: center;
+}
+.centered-link {
+    display: inline-block;
+    text-align: center;
+    width: 100px; /* Ajusta el ancho según tus necesidades */
+}
+/* Puedes ajustar más estilos según tu diseño */
+
 .pokedex-card {
     width: 300px;
     height: 350px;
     margin: 0 auto;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
