--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,7 @@
     background-color: 	#FF4500;
     // position: absolute;
     width: 100%;
+    box-sizing: border-box;
     
     .header-container {
         max-width: 1100px;
